--- a/mars.html
+++ b/mars.html
@@ -30,6 +30,10 @@
             <div class="glass-box">
                 <h3>Geological Activity</h3>
             </div>
+
+            <div class="glass-box">
+                <h3>Geological Activity</h3>
+            </div>
         </div>
     </body>
 </html>
