--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     </head>
     <body>
         <h1>Alex Khachadoorian AY 101 Project</h1>
+        <a href="/mars.html">Mars</a>
     </body>
 </html>
