--- a/mars.html
+++ b/mars.html
@@ -16,20 +16,26 @@
 
     <body>
         <div class="mars">
+            <div class="nav">
+                <a href="">
+                    <i class="ph ph-arrow-left"></i>
+                    <span>Earth</span>
+                </a>
+            </div>
             <div class="planet-header">
                 <h1>Mars</h1>
             </div>
 
             <div class="img-holder mars">
-                <div class="size-wrapper">
-                    <div class="glass-box size">
+                <div class="appear-wrapper">
+                    <div class="glass-box appear" id="radius">
                         <h3>Radius</h3>
                         <p>2,106 miles</p>
                         <p>3,390 kilometers</p>
                     </div>
                 </div>
-                <div class="distance-wrapper">
-                    <div class="glass-box distance">
+                <div class="appear-wrapper">
+                    <div class="glass-box appear" id="distance-from-sun">
                         <h3>Distance from Sun</h3>
                         <p>142 million miles</p>
                         <p>228 million kilometers</p>
@@ -38,17 +44,32 @@
                 </div>
             </div>
 
-            <h2>Composition and Structure</h2>
-            <div class="composition mars">
-                <div class="filler"></div>
-                <div class="glass-box">
-                    <h3>Composition</h3>
+            <div class="comp">
+                <h2>Composition and Structure</h2>
+                <div class="composition mars">
+                    <div class="filler"></div>
+                    <div class="glass-box">
+                        <h3>Composition</h3>
+                    </div>
                 </div>
             </div>
 
-            <div class="glass-box">
-                <h3>Geological Activity</h3>
-                <i class="ph ph-triangle"style="color: white"></i>
+            <div class="geo">
+                <h2>Geological Activity</h2>
+                <div class="geological">
+                    <div class="glass-box">
+                        <i class="ph ph-triangle"></i>
+                        <h4>Volcanoes</h4>
+                    </div>
+                    <div class="glass-box">
+                        <i class="ph ph-triangle"></i>
+    
+                    </div>
+                    <div class="glass-box">
+                        <i class="ph ph-magnet"></i>
+    
+                    </div>
+                </div>
             </div>
 
             <div class="glass-box">
@@ -61,33 +82,22 @@
 <script>
 const observerSize = new IntersectionObserver(entries => {
   entries.forEach(entry => {
-    const size = entry.target.querySelector('.size');
+    const element = entry.target.querySelector('.appear');
 
     if (entry.isIntersecting) {
-        size.classList.add('show');
+        setTimeout(() => {
+            element.classList.add('show');
+        }, 300);
 	  return; // if we added the class, exit the function
     }
 
-    // We're not intersecting, so remove the class!
-    size.classList.remove('show');
+    // We're not intersecting, so remove the class with a delay
+    setTimeout(() => {
+        element.classList.remove('show');
+    }, 300); // Delay in milliseconds (500 ms in this case)
   });
 });
 
-observerSize.observe(document.querySelector('.size-wrapper'));
+document.querySelectorAll('.appear-wrapper').forEach(element => observerSize.observe(element));
 
-const observerDistance = new IntersectionObserver(entries => {
-  entries.forEach(entry => {
-    const distance = entry.target.querySelector('.distance');
-
-    if (entry.isIntersecting) {
-        distance.classList.add('show');
-	  return; // if we added the class, exit the function
-    }
-
-    // We're not intersecting, so remove the class!
-    distance.classList.remove('show');
-  });
-});
-
-observerDistance.observe(document.querySelector('.distance-wrapper'));
 </script>
