--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!-- https://images.nasa.gov/details/GSFC_20171208_Archive_e001738 -->
+
+
 <!DOCTYPE html>
 
 <html lang="en">
@@ -9,9 +12,56 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+        <script src="https://unpkg.com/@phosphor-icons/web"></script>
     </head>
     <body>
-        <h1>Alex Khachadoorian AY 101 Project</h1>
-        <a href="/mars.html">Mars</a>
+        <div class="galaxy-header">
+            <div class="galaxy">
+                <h1>Milky Way</h1>
+
+                <!-- <div class="planet scroller">
+                    <div class="glass-box">
+                        <a href="mars.html">Mars</a>
+                    </div>
+                </div> -->
+            </div>
+        </div>
+
+        <div class="formation-solar-system">
+            <h2>Formation of the Solar System</h2>
+            <div class="formation">
+                <div class="glass-box">
+                    <h4>Protosolar Nebula</h4>
+                    <p>A protosolar nebula is a collapsing gas cloud that spins very slowly around a horizontal axis. This horizontal spinning causes the height of the gas cloud to decrease, as it is easier for the gas to fall in the direction perpendicular to its rotation.</p>
+                </div>
+                <i class="ph ph-arrow-right"></i>
+                <div class="glass-box">
+                    <h4>Conserve Momentum</h4>
+                    <p>During its collapse, the material within the protosolar nebula congregates in the center. The aggregation of material, alongside the nebula's decrease in size, permits the nebula to conserve angular momentum, which increases its rotation speed, and causes it to flatten more quickly.</p>
+                </div>
+                <i class="ph ph-arrow-right"></i>
+                <div class="glass-box">
+                    <h4>Energy Conversion</h4>
+                    <p>The potential energy in the protosolar nebula is converted into thermal energy, increasing the temperature at the center of the gas cloud.</p>
+                </div>
+                <!-- <i class="ph ph-arrow-right"></i>
+                <div class="glass-box">
+                    <h4>Protosolar Nebula</h4>
+                </div> -->
+                
+            </div>
+        </div>
+
+
+        <!-- <h1>Alex Khachadoorian AY 101 Project</h1> -->
+        
     </body>
+    <footer>
+        <div class="line"></div>
+        <div class="footer">
+            <h6>Alex Khachadoorian</h6>
+            <p>AY 101 Project</p>
+            <a href="">Citations</a>
+        </div>
+    </footer>
 </html>
