--- a/mars.html
+++ b/mars.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <!-- https://science.nasa.gov/mars/facts/ -->
+<!-- https://www.publicdomainpictures.net/en/free-download.php?image=mars&id=86459 -->
 
 <html>
     <head>
@@ -106,6 +107,15 @@
             </div>
         </div>
     </body>
+
+    <footer>
+        <div class="line"></div>
+        <div class="footer">
+            <h6>Alex Khachadoorian</h6>
+            <p>AY 101 Project</p>
+            <a href="">Citations</a>
+        </div>
+    </footer>
 </html>
 
 <script>
