--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         <script src="https://unpkg.com/@phosphor-icons/web"></script>
         <script src="https://kit.fontawesome.com/a51966c846.js" crossorigin="anonymous"></script>
 
+        <script src="homepage.js" type="module" defer></script>
+        <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+<script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+
+
     </head>
     <body class="index">
         <div class="galaxy-header">
@@ -62,9 +67,8 @@
 
         <div class="planet-components">
             <h2>Components for Planet Building</h2>
-            <div class="planet-comp">
-                <div class="glass-box">
-                    <!-- <i class="ph ph-wind"></i> -->
+            <div class="planet-comp" id="planet-comp">
+                <!--<div class="glass-box">
                     <div class="icon-w-head">
                         <i class="fa-solid fa-wind"></i>
                         <h4>Hydrogen & Helium Gas</h4>
@@ -80,8 +84,8 @@
                     <p><strong>Relative Abundance by mass: </strong>1.4%</p>
                     <p><strong>Typical condensation temperature: </strong>< 150 K</p>
                     <p><strong>Examples:</strong> Water (H<sub>2</sub>0), Methane (CH<sub>4</sub>), and Ammonia (NH<sub>3</sub>)</p> 
-
                 </div>
+                -->
             </div>
 
             <div class="planet-comp">
